--- a/arduino/RPI/rpi/index.html
+++ b/arduino/RPI/rpi/index.html
@@ -1,10 +1,15 @@
 <html>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <body>
+<div class="temperatura" id="tmp">25º</div>
+<div class="centro">
 <input min="0" max="255" type="range" id="myRange" value="100" oninput="change(this.value)" onchange="change(this.value);">
+<input type="text" value="Ayy lmao" onkeyup="display(this.value);">
+</div>
 </body>
 
 <style>
@@ -14,16 +19,37 @@ body, html {
 	width: 100vw;
 }
 
-input {
+.centro {
+	position: relative;
+	display: flex;
+	display: -webkit-flex;
+	
+	flex-flow: column;
+	-webkit-flex-flow: column;
 	position: fixed;
 	width: 95vw;
+	height: 20vh;
 	left: 2.5vw;
-	top: 49vh;
+	top: 40vh;
 }
+
+.centro > * {
+	width: 100%;
+	margin-top: 30px;
+}
+
+.temperatura {
+	font-size: 20px;
+	position: fixed;
+	left: 20px;
+	top: 20px;
+}
+
 </style>
 
 <script>
 function change(e) {
+	console.log(e);
 	$.ajax({
     		url: '/led',
     		type: 'PUT',
@@ -34,16 +60,43 @@ function change(e) {
 	});
 }
 
+function display(e) {
+	console.log(e);
+	$.ajax({
+    		url: '/display',
+    		type: 'PUT',
+		data: e,
+    		success: function(result) {
+        		console.log(result);
+    		}
+	});	
+}
+
 setInterval(function () {
 	//console.log("lmao");
 	$.ajax({
 		url: "/luz",
 		type: "GET",
 		success: function(result) {
-			//console.log(result);
-			$("body").css({"background-color": ""+result+result+result});
+			result = ""+result;
+			//console.log(result+result+result);
+			if (result.length < 2)
+				result = "0"+result;
+			$("body").css({"background-color": "#"+result+result+result});
+		}
+	});
+	$.ajax({
+		url: "/tmp",
+		type: "GET",
+		success: function(result) {
+			result = ""+result;
+			//console.log(result+result+result);
+			result = parseFloat(result);
+			$("#tmp").get(0).innerHTML = result.toFixed(2)+"º";
 		}
 	});
 }, 50);
+
+
 </script>
 </html>
